--- a/src/main/resources/templates/bienvenido.html
+++ b/src/main/resources/templates/bienvenido.html
@@ -108,7 +108,23 @@ header label {
       </ul>
     </nav>
    </div>
+ 
    </header>
+ 
+   
+   
   </body>
+  <br></br>
+         <center><h3>BIENVENIDO AL PORTAL DE MONITOREO</h3></center>
+          <br></br>
+     <div class="container">
+		<form id="myform">
+			<div class="row clearfix">
+				<div class="col-md-12 column" align="center">
+					<img th:src="@{/imagenes/img.png}" width="550" height="400" alt="logo" align="middle"></img>
+				</div>
+			</div>
+		</form>
+	</div>
   
 </html>
